- Fixed bug #43271 (pdo_firebird: closeCursor not implemented) # Actually firebird_stmt_execute() didn't close a previously opened cursor, but implemented closeCursor anyway.

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/branches/PHP_5_3@246212 c90b9560-bf6c-de11-be94-00142212c4b1